@@ -1,4 +1,5 @@
 0.06
+ - Add test for 'second_round'.
  - Rewrite from List::MoreUtils to List::Util.
  - Update Module::Install to 1.21 version.
  - Update copyright years.
